# masters-thesis

./: README.md  citation-cache.json  manuscript.html  manuscript.md  pyproject.toml  references.json  spelling-error-locations.txt  spelling-errors.txt  variables.json
.github/workflows/: manubot.yaml
content/: 00.front-matter.md  01.abstract.md  0_abstract.md  0a_front-matter.md  1_introduction.md  2_preliminaries.md  2_related_work.md  3_preliminaries.md  3_related_work.md  4_contribution.md  5_experiments.md  6_results.md  7_implementation.md  8_conclusion.md  90.back-matter.md  91_appendix.md  9_conclusion.md  9a_back-matter.md  9b_appendix.md  abstract_de.md  metadata.yaml  references.md  z_appendix.md
v/08c023711043a7e1cae573172b4720e70b5b9a48/: index.html  index.html.ots  manuscript.pdf.ots
v/0d56060fcc1b00d3f8ae6ff9158112299f632c3b/: index.html.ots  manuscript.pdf.ots
v/16eee40b11c98a7f7fc581f7b6dd08bdd8f78d0b/: index.html.ots  manuscript.pdf.ots
v/1ee255fe5354d711b6ed5129b4a867dffda3465d/: index.html  index.html.ots  manuscript.pdf.ots
v/2ba35ef7cdba2bbc966116e12b05e4ee9072b511/: index.html.ots  manuscript.pdf.ots
v/3c0b9b3e46a7f1a90a4d212f23f9742038bab044/: index.html.ots  manuscript.pdf.ots
v/3c28d8cb9c11f711df7070c556566c072bfc738a/: index.html.ots  manuscript.pdf.ots
v/4754703f9cefa9f3c3a272aac5888f6e2dd14c3d/: index.html.ots  manuscript.pdf.ots
v/4ae86e97d4c2b0cca501d2270418908b804c658e/: index.html.ots  manuscript.pdf.ots
v/4af59011e8fa4e29dc98575678c0c8d0baf06823/: index.html.ots  manuscript.pdf.ots
v/freeze/: index.html
(+47 files in other folders)
