[tool.poetry]
name = "masters-thesis"
version = "0.1.0"
description = ""
authors = ["phiresky <phireskyde+git@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
manubot = "^0.5.1"
pandoc-xnos = "^2.5.0"
titlecase = "^2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
